--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dev_dependencies:
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
+
+  dependencies:
+  google_fonts: ^6.3.0
+
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
